@@ -1,0 +1,10 @@
+Title: History view: Only showing removed/added entries tables when there are entries
+Level: 1
+Component: inv
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p4
+Date: 1479072597
+
+
